fixed overflow issue with captured pieces

--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ body {
 
 .captured-pieces {
     border: 1px solid var(--text-color);
-    height: 75%;
+    height: 80%;
     border-radius: var(--rounded-border);
     box-shadow: var(--basic-shadow);
 }
@@ -73,6 +73,7 @@ body {
     font-family: 'Courier New', Courier, monospace;
     box-shadow: var(--basic-shadow);
 }
+
 /* 
 .about ul {
     display: flex;
@@ -96,36 +97,52 @@ body {
         width: 30rem;
         height: 30rem;
     }
+
     .row {
         height: 30rem;
     }
+
     .column {
         width: 30rem;
     }
-    .row, .column li {
+
+    .row,
+    .column li {
         font-size: 1.1em;
     }
-    
+
 
     .about {
         height: 100%;
     }
+
     .about ul {
         display: flex;
         justify-content: space-between;
         padding: 1em;
         flex-wrap: wrap;
     }
+
     .about img {
         width: 25%;
         border-radius: 25%;
         transition: .4s;
     }
+
     .about img:hover {
         width: 30%;
         box-shadow: var(--basic-shadow);
     }
-    
+
+
+    .info-window h1,
+    h2 {
+        font-size: 1em;
+    }
+
+    .captured-section {
+        height: 30%;
+    }
 }
 
 @media only screen and (min-width: 1500px) {
@@ -133,36 +150,48 @@ body {
         width: 52rem;
         height: 52rem;
     }
+
     .row {
         height: 52rem;
     }
+
     .column {
         width: 52rem;
     }
-    .row, .column li {
+
+    .row,
+    .column li {
         font-size: 2em;
     }
-    
+
 
     .about {
         height: 30%;
     }
+
     .about ul {
         display: flex;
         justify-content: space-between;
         padding: 1em;
-        
+
     }
+
     .about img {
         width: 70%;
         border-radius: 25%;
         transition: .4s;
     }
+
     .about img:hover {
         width: 75%;
         box-shadow: var(--basic-shadow);
     }
-    
+
+    .captured-section {
+        height: 40%;
+    }
+
+
 }
 
 .chess-board {
@@ -172,6 +201,7 @@ body {
     border: 5px solid var(--text-color);
     box-shadow: var(--basic-shadow);
 }
+
 .chess-board p {
     color: var(--text-color);
 }
@@ -291,21 +321,21 @@ h2 {
 }
 
 .captured-section {
-    height: 45%;
     width: 100%;
+    /* border: 1px solid black; */
 }
 
 .captured-area {
     height: 95%;
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 2em 2em;
 }
 
 .captured-area p {
     text-align: center;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .selectSave {
@@ -326,7 +356,8 @@ h2 {
 }
 
 /* For row and column labels to show the location of pieces on the board */
-.row, .column {
+.row,
+.column {
     list-style: none;
     /* margin-left: 5%;  */
     /* border: 1px solid black; */
@@ -343,4 +374,3 @@ h2 {
     margin-left: 3em;
 
 }
-
